project cards style fix added gap

--- a/Frontend/src/Styles/Project.module.css
+++ b/Frontend/src/Styles/Project.module.css
@@ -32,6 +32,7 @@
     row-gap: 30px;
     height: auto;
     flex-grow: 1; 
+    gap: 2rem;
   }
 
   .loadingText{
